feat(security-auth-moica): implement MOICA citizen certificate PKCS#7 authentication
- Add LoginTokenService: single-use challenge token stored in Redis (5 min TTL)
- Add Pkcs7Utils: parse and verify PKCS#7 SignedData using Bouncy Castle CMSSignedData
- Add MoicaCertUtils: X.509 chain validation, OCSP/CRL revocation, extract cname/last4IDNO
- Add MoicaCertService: load MOICA2/MOICA3 intermediate CA certs from classpath
- Add exception hierarchy: MoicaLoginException, MoicaRevocationException, etc.
- Rewrite CitizenCertController: GET /api/auth/cert/login-token + POST /api/auth/cert/login
- Add CertLoginRequest: { loginToken, base64Data } replacing old challenge/signature fields
- Add LoginTokenResponse DTO
- Add last4Idno field to SaUser + findByCnameAndLast4Idno query
- Add syncUserByCnameAndIdno() to CitizenCertUserSyncService
- Add MOICA2.cer and MOICA3.cer real intermediate CA certificates
- Add DB migration 004-add-last4-idno-column.sql
- Add 26 TDD tests in Phase13_CitizenCertTest covering full authentication pipeline

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>